--- a/style.css
+++ b/style.css
@@ -7,12 +7,12 @@
   display: table;
   height: auto;
 
-  color: #fcfcfc;
+  color: #FAFAFA;
   text-transform: uppercase;
   text-align: center;
 
   font-size: 8em;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Rock Salt', cursive;
   font-weight: 800;
 
   letter-spacing: -0.02em;
