--- a/style.css
+++ b/style.css
@@ -1,20 +1,42 @@
-#thomas {
-  margin: auto;
-  position: absolute;
-  top: 0; left: 0; bottom: 100; right: 0;
-  width: 100%;
+* {
+  margin: 0;
+  padding: 0;
+}
 
-  display: table;
-  height: auto;
+.aboutme {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 700px;
+  opacity: 0;
+  transition: all 1s ease-out;
+}
 
-  color: #FAFAFA;
-  text-transform: uppercase;
+.aboutme.fade-in {
+  opacity: 1;
+}
+
+.aboutme > p {
+  letter-spacing: 2px;
   text-align: center;
+  padding: 0 100px;
+  line-height: 2;
+}
 
-  font-size: 8em;
-  font-family: 'Rock Salt', cursive;
-  font-weight: 800;
+#arrow {
+  padding-left: 10px;
+  -ms-transform: rotate(90deg); /* IE 9 */
+  -webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
+  transform: rotate(90deg);
+  width: 120px;
+  height: 120px;
+}
 
-  letter-spacing: -0.02em;
-  line-height: 1.2em;
+body {
+  background-color: rgb(255, 255, 255);
+  margin: 0;
+  padding: 0;
+  font-family: 'Open Sans Condensed', sans-serif;
+  height: 100%;
 }
