--- a/style.css
+++ b/style.css
@@ -40,3 +40,31 @@ body {
   font-family: 'Open Sans Condensed', sans-serif;
   height: 100%;
 }
+
+.content-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 2;
+  color: white;
+}
+
+.content-container > h1{
+  z-index: 2;
+  font-size: 80px;
+  margin: 0;
+  text-shadow: 1px 1px 1px gray;
+  text-align: center;
+}
+
+.content-container > p {
+  z-index: 2;
+  font-size: 20px;
+  letter-spacing: 1.5px;
+  margin: 0;
+  padding: 50px 150px 0 150px;
+  text-align: center;
+}
