--- a/style.css
+++ b/style.css
@@ -68,3 +68,39 @@ body {
   padding: 50px 150px 0 150px;
   text-align: center;
 }
+
+#email-logo, #linked-in {
+  border-radius: 10px;
+}
+
+footer {
+  height: 60px;
+  background-color: #B76EB7;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+}
+
+footer a {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+footer img {
+  display: relative;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 50%;
+  max-height: 50%;
+  padding: 0 20px;
+  opacity: 0.8;
+}
+
+#foot-github {
+  max-width: 58%;
+  max-height: 58%;
+}
