--- a/style.css
+++ b/style.css
@@ -74,8 +74,8 @@ body {
 }
 
 footer {
-  height: 60px;
-  background-color: grey;
+  height: 25vh;
+  background-image: url(http://media.istockphoto.com/photos/brick-wall-picture-id497944862?k=6&m=497944862&s=170667a&w=0&h=fOEorpNTRb6cYJeTSJu7hSWhrCuTUOAIlF9F96yrhI8=);
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -141,6 +141,32 @@ header.slideIn {
 
 .hidden-links {
   display: none;
+}
+
+.icons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 80px;
+  margin-top: 10px;
+}
+
+.icons > a {
+  height: 100%;
+}
+
+.icons > a > img {
+  display: relative;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 70%;
+  max-height: 70%;
+  padding: 5px 5px;
+  opacity: 0;
+  -webkit-transform: translate3d(0, 100%, 0);
+  transform: translate3d(0, 100%, 0);
+  z-index: 9999;
 }
 
 /* Shine.js in header */
