--- a/style.css
+++ b/style.css
@@ -180,6 +180,28 @@ header.slideIn {
   overflow: hidden;
 }
 
+.image-container > img {
+  width: 102%;
+  height: 150%;
+  z-index: 1;
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
+}
+
+.image-container > img:hover {
+  width: 102%;
+  height: 150%;
+  z-index: 1;
+  -webkit-filter: blur(1px);
+  -moz-filter: blur(1px);
+  -o-filter: blur(1px);
+  -ms-filter: blur(1px);
+  filter: blur(1px);
+}
+
 /* Shine.js in header */
 .thomas {
   margin: auto;
