--- a/style.css
+++ b/style.css
@@ -202,6 +202,69 @@ header.slideIn {
   filter: blur(1px);
 }
 
+/* Parallax background */
+.land {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+  padding-top: 100px;
+  opacity: 1;
+  transition: all 1s ease-out;
+}
+
+.land.fade-out {
+  opacity: 0;
+}
+
+.land > h3 {
+  margin: 0;
+  padding: 0;
+  font-size: 15px;
+  color: gray;
+  letter-spacing: 5px;
+}
+
+.mobile-links {
+  display: none;
+}
+
+#name {
+  font-size: 30px;
+  color: #000000;
+  margin: 0;
+  padding-top: 150px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  letter-spacing: 5px;
+}
+
+.overlay {
+  position: absolute;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  margin-left: 0px;
+  margin-right: 0px;
+  background-color: gray;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  -webkit-opacity: 0;
+  -moz-opacity: 0;
+  opacity: 0;
+  -webkit-transition: all 0.7s ease;
+  -moz-transition: all 0.7s ease;
+  -ms-transition: all 0.7s ease;
+  -o-transition: all 0.7s ease;
+  transition: all 0.7s ease;
+}
+
+
 /* Shine.js in header */
 .thomas {
   margin: auto;
