change overlay on hover and other element tags

--- a/style.css
+++ b/style.css
@@ -264,6 +264,35 @@ header.slideIn {
   transition: all 0.7s ease;
 }
 
+.overlay:hover {
+  -webkit-opacity: 1;
+  -moz-opacity: 1;
+  opacity: 0.95;
+}
+
+.overlay > p {
+  font-size: 25px;
+  margin: 5px;
+  color: white;
+  letter-spacing: 2px;
+}
+
+.overlay > a {
+  font-size: 25px;
+  border: 3px solid white;
+  margin: 10px;
+  padding: 2px 20px 4px 20px;
+  text-decoration: none;
+  color: white;
+  letter-spacing: 2px;
+  text-align: center;
+}
+
+.overlay > a:hover {
+  background-color: white;
+  color: gray;
+}
+
 
 /* Shine.js in header */
 .thomas {
