--- a/style.css
+++ b/style.css
@@ -70,6 +70,10 @@ body {
   text-align: center;
 }
 
+#content1 > h1 {
+  font-family: 'Bungee Outline', cursive;
+}
+
 #email-logo, #linked-in {
   border-radius: 10px;
 }
@@ -293,6 +297,87 @@ header.slideIn {
   color: gray;
 }
 
+.project-container {
+  height: 500px;
+}
+
+.project-container.parallax {
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+}
+
+.project-info {
+  height: 600px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transform: translateY(50px);
+  transition: all 1s ease-out;
+}
+
+.project-info.fade-in {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.project-img {
+  height: 42%;
+  width: 28%;
+  margin: 30px;
+  overflow: hidden;
+  position: relative;
+}
+
+#project3-info > .project-img {
+  height: 52%;
+  width: 40%;
+  margin: 50px;
+}
+
+.project-img > img {
+  width: 101%;
+  height: 101%;
+}
+
+.project-img > img:hover {
+  -webkit-filter: blur(2px);
+  -moz-filter: blur(2px);
+  -o-filter: blur(2px);
+  -ms-filter: blur(2px);
+  filter: blur(2px);
+  opacity: 0.7;
+}
+
+.project-container.fade-in {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+#scroll-div {
+  position: absolute;
+  opacity: 0;
+  -webkit-transform: translate3d(0, 100%, 0);
+  transform: translate3d(0, 100%, 0);
+  z-index: -1;
+  top: 10px;
+}
+
+#scroll-div > p {
+  margin: 10px 50px 10px 50px;
+}
+
+.slide-up {
+  opacity: 0;
+  transform: translateY(50px);
+  transition: all 0.8s ease-in-out;
+}
+
+.slide-up.fade-in {
+  opacity: 1;
+  transform: translateY(0);
+}
 
 /* Shine.js in header */
 .thomas {
