fix 768px width media query

--- a/style.css
+++ b/style.css
@@ -459,7 +459,23 @@ header.slideIn {
   }
 }
 
-@media (max-width:768px) {
+@media on screen and (max-width:768px) {
+  .project-img {
+    height: 30%;
+    width: 30%;
+    margin: 10px;
+  }
+
+  #project3-info > .project-img {
+    height: 40%;
+    width: 50%;
+  }
+
+  .technology > p {
+    margin: 3px;
+    font-size: 18px;
+  }
+
   .thomas {
     margin: auto;
     position: absolute;
