--- a/style.css
+++ b/style.css
@@ -498,3 +498,54 @@ header.slideIn {
     background-size: contain;
   }
 }
+
+@media only screen and (max-width: 600px) {
+  .content-container > h1 {
+    font-size: 65px;
+  }
+
+  .hidden-image {
+    display: none;
+  }
+
+  .hidden-links {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .hidden-links > a {
+    font-size: 25px;
+    border: 3px solid white;
+    margin: 10px;
+    padding: 2px 20px 4px 20px;
+    text-decoration: none;
+    color: white;
+    letter-spacing: 2px;
+    text-align: center;
+  }
+
+  .hidden-links > a:hover {
+    background-color: white;
+    color: gray;
+  }
+
+  .overlay > p, .overlay > a {
+    display: none;
+  }
+
+  .project-img {
+    height: 36%;
+    width: 52%;
+    margin: 20px;
+  }
+
+  #project3-info > .project-img {
+    height: 36%;
+    width: 52%;
+    margin: 20px;
+  }
+
+  .technology {
+    padding: 0 10px 0 10px;
+  }
+}
