fix scroll magic parallax scrolling

--- a/style.css
+++ b/style.css
@@ -197,18 +197,7 @@ header.slideIn {
   -moz-filter: blur(5px);
   -o-filter: blur(5px);
   -ms-filter: blur(5px);
-  filter: blur(10px);
-}
-
-.image-container > img:hover {
-  width: 102%;
-  height: 150%;
-  z-index: 1;
-  -webkit-filter: blur(1px);
-  -moz-filter: blur(1px);
-  -o-filter: blur(1px);
-  -ms-filter: blur(1px);
-  filter: blur(1px);
+  filter: blur(5px);
 }
 
 /* Parallax background */
@@ -424,6 +413,12 @@ header.slideIn {
   letter-spacing: -0.02em;
   line-height: 1.2em;
   background-size: contain;
+}
+
+#upick {
+  height: 200px;
+  width: 200px;
+  z-index: 1;
 }
 
 @media only screen and (max-width: 1150px) {
