--- a/style.css
+++ b/style.css
@@ -34,7 +34,8 @@ body {
   background-color: rgb(255, 255, 255);
   margin: 0;
   padding: 0;
-  font-family: 'Open Sans Condensed', sans-serif;
+  /*font-family: 'Open Sans Condensed', sans-serif;*/
+  font-family: 'Josefin Sans', sans-serif;
   color: #808589;
   height: 100%;
 }
