--- a/style.css
+++ b/style.css
@@ -245,7 +245,7 @@ header.slideIn {
   height: 100%;
   margin-left: 0px;
   margin-right: 0px;
-  background-color: gray;
+  background-color: rgb(225, 229, 237);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -268,15 +268,15 @@ header.slideIn {
 
 .overlay > p {
   font-size: 25px;
-  margin: 5px;
+  margin: 10px;
   color: black;
   letter-spacing: 2px;
 }
 
 .overlay > a {
   font-size: 25px;
-  border: 3px solid white;
-  margin: 10px;
+  border: 1px solid white;
+  margin: 12px;
   padding: 2px 20px 4px 20px;
   text-decoration: none;
   color: white;
@@ -534,7 +534,7 @@ header.slideIn {
 
   .hidden-links > a:hover {
     background-color: white;
-    color: gray;
+    color: rgb(225, 229, 237);
   }
 
   .overlay > p, .overlay > a {
