--- a/style.css
+++ b/style.css
@@ -613,12 +613,12 @@ header.slideIn {
   }
 
   #arrow {
-    text-align: center;
-    display: block;
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
     width: 90px;
     height: 70px;
-    margin: auto;
   }
 
   .content-container > h1 {
@@ -728,12 +728,12 @@ header.slideIn {
   }
 
   #arrow {
-    text-align: center;
-    display: block;
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
     width: 90px;
     height: 70px;
-    margin: auto;
   }
 
   .content-container > h1 {
