--- a/style.css
+++ b/style.css
@@ -614,10 +614,10 @@ header.slideIn {
 
   #arrow {
     display: block;
-    position: relative;
     width: 90px;
     height: 70px;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .content-container > h1 {
@@ -728,10 +728,10 @@ header.slideIn {
 
   #arrow {
     display: block;
-    position: relative;
     width: 90px;
     height: 70px;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .content-container > h1 {
