--- a/style.css
+++ b/style.css
@@ -595,6 +595,11 @@ header.slideIn {
 }
 
 @media all and (max-width: 400px) {
+
+  .land > h3 {
+    font-size: 11px !important;
+  }
+
   .aboutme > p {
     padding: 0 20px;
   }
@@ -711,7 +716,7 @@ header.slideIn {
 @media all and (max-width: 320px) {
 
   .land > h3 {
-    font-size: 11px;
+    font-size: 11px !important;
   }
 
   .aboutme > p {
