--- a/style.css
+++ b/style.css
@@ -475,6 +475,16 @@ header.slideIn {
     width: 50%;
   }
 
+  .skills > img {
+    display: relative;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 70px;
+    margin-top: 10px;
+    padding: 5px;
+  }
+
   .technology > p {
     margin: 3px;
     font-size: 18px;
@@ -550,7 +560,7 @@ header.slideIn {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    height: 70px;
+    height: 50px;
     margin-top: 10px;
     padding: 5px;
   }
@@ -600,7 +610,7 @@ header.slideIn {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    height: 70px;
+    height: 50px;
     margin-top: 10px;
     padding: 5px;
   }
