--- a/style.css
+++ b/style.css
@@ -673,6 +673,17 @@ header.slideIn {
     display: none;
   }
 
+  .image-container > img {
+    width: 102%;
+    height: 95%;
+    z-index: 1;
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+    filter: blur(3px);
+  }
+
   .mobile-links {
     display: flex;
     align-items: center;
@@ -800,6 +811,17 @@ header.slideIn {
 
   .hidden-links {
     display: none;
+  }
+
+  .image-container > img {
+    width: 102%;
+    height: 75%;
+    z-index: 1;
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+    filter: blur(5px);
   }
 
   .mobile-links {
