--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ header.slideIn {
   align-items: center;
   justify-content: center;
   z-index: 1;
-  padding-top: 100px;
+  padding-top: 200px;
   opacity: 1;
   transition: all 1s ease-out;
 }
@@ -398,9 +398,9 @@ header.slideIn {
 .thomas {
   margin: auto;
   position: absolute;
-  top: 50px; left: 0; bottom: 250px; right: 650;
+  top: 150px; left: -10px; bottom: 250px; right: 150px;
   width: 100%;
-  max-width: 100%;
+  max-width: 500px;
   display: flex;
   height: auto;
   color: #FAFAFA;
@@ -412,6 +412,10 @@ header.slideIn {
   letter-spacing: -0.02em;
   line-height: 1.2em;
   background-size: contain;
+}
+
+.land {
+  padding-top: 250px;
 }
 
 #upick {
@@ -535,6 +539,10 @@ header.slideIn {
     font-size: 65px;
   }
 
+  .land {
+    padding-top: 100px;
+  }
+
   .hidden-image {
     display: none;
   }
@@ -647,14 +655,14 @@ header.slideIn {
   .thomas {
     margin: auto;
     position: absolute;
-    top: 150px; left: 0; bottom: 250px; right: 350;
+    top: 70px; left: -10px; bottom: 250px; right: 350;
     width: 100%;
     display: flex;
     height: auto;
     color: #FAFAFA;
     text-transform: uppercase;
     text-align: center;
-    font-size: 4em;
+    font-size: 3.5em;
     font-family: 'Rock Salt', cursive;
     font-weight: 800;
     letter-spacing: -0.02em;
@@ -796,14 +804,14 @@ header.slideIn {
   .thomas {
     margin: auto;
     position: absolute;
-    top: 70px; left: 0; bottom: 250px; right: 350;
+    top: 70px; left: -10px; bottom: 250px; right: 350;
     width: 100%;
     display: flex;
     height: auto;
     color: #FAFAFA;
     text-transform: uppercase;
     text-align: center;
-    font-size: 3.5em;
+    font-size: 3.2em;
     font-family: 'Rock Salt', cursive;
     font-weight: 800;
     letter-spacing: -0.02em;
@@ -949,14 +957,14 @@ header.slideIn {
   .thomas {
     margin: auto;
     position: absolute;
-    top: 70px; left: 0; bottom: 200px; right: 350;
+    top: 70px; left: -10px; bottom: 200px; right: 350;
     width: 100%;
     display: flex;
     height: auto;
     color: #FAFAFA;
     text-transform: uppercase;
     text-align: center;
-    font-size: 3.3em;
+    font-size: 3em;
     font-family: 'Rock Salt', cursive;
     font-weight: 800;
     letter-spacing: -0.02em;
