--- a/style.css
+++ b/style.css
@@ -2,6 +2,46 @@
   margin: 0;
   padding: 0;
 }
+.flex {
+  display: flex;
+}
+
+#loader {
+  margin-top: 150px;
+  position: relative;
+  flex:1;
+  align-items: center;
+  align-self: center;
+  align-content: center;
+}
+
+#overlay{
+  position:fixed;
+  z-index:99999;
+  top:0;
+  left:0;
+  bottom:0;
+  right:0;
+  background:rgba(0,0,0,0.9);
+  transition: 1s 0.4s;
+}
+#progress{
+  height:1px;
+  background:#fff;
+  position:absolute;
+  width:0;
+  top:50%;
+}
+#progstat{
+  font-size:0.7em;
+  letter-spacing: 3px;
+  position:absolute;
+  top:50%;
+  margin-top:-40px;
+  width:100%;
+  text-align:center;
+  color:#fff;
+}
 
 .aboutme {
   display: flex;
