--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
 }
+
 .flex {
   display: flex;
 }
@@ -23,7 +24,7 @@
   bottom:0;
   right:0;
   background:rgba(0,0,0,0.9);
-  transition: 1s 0.4s;
+  /*transition: 1s 0.4s;*/
 }
 #progress{
   height:1px;
