--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
   bottom:0;
   right:0;
   background:rgba(0,0,0,0.9);
-  /*transition: 1s 0.4s;*/
+  transition: 1s 0.4s;
 }
 #progress{
   height:1px;
