--- a/style.css
+++ b/style.css
@@ -7,6 +7,18 @@
   display: flex;
 }
 
+.resume {
+  margin-bottom: 200px;
+}
+
+.resume h2 {
+  margin: 1em auto;
+}
+
+.resume li {
+  line-height: 1.5em;
+}
+
 /*#loader {
   margin-top: 150px;
   position: relative;
@@ -49,9 +61,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 700px;
+  height: 400px;
   opacity: 0;
   transition: all 1s ease-out;
+  padding-bottom: 0px;
 }
 
 .aboutme.fade-in {
@@ -119,34 +132,18 @@ body {
 
 footer {
   height: 25vh;
-  background-image: url(http://media.istockphoto.com/photos/brick-wall-picture-id497944862?k=6&m=497944862&s=170667a&w=0&h=fOEorpNTRb6cYJeTSJu7hSWhrCuTUOAIlF9F96yrhI8=);
+  /*background-image: url(http://media.istockphoto.com/photos/brick-wall-picture-id497944862?k=6&m=497944862&s=170667a&w=0&h=fOEorpNTRb6cYJeTSJu7hSWhrCuTUOAIlF9F96yrhI8=);*/
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   margin: 0;
 }
-
 footer a {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+transition: all .5s ease;
 }
-
-footer img {
-  display: relative;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 50%;
-  max-height: 50%;
-  padding: 0 20px;
-  opacity: 0.8;
-}
-
-#foot-github {
-  max-width: 58%;
-  max-height: 58%;
+footer a:hover {
+  font-size: 20px;
 }
 
 header {
